--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vuelidate": "^0.7.7",
+    "vueperslides": "^2.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,7 +20,12 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "install": "^0.13.0",
+    "npm": "^9.6.4",
+    "vue": "^2.7.14",
+    "vue-router": "^3.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "vuetify": "^2.6.15"
   },
   "eslintConfig": {
     "root": true,
