--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "vuelidate": "^0.7.7",
     "vueperslides": "^2.16.0"
