--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "vuelidate": "^0.7.7",
     "vueperslides": "^2.16.0"
   },
