--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "register-service-worker": "^1.7.2",
     "vuelidate": "^0.7.7",
     "vueperslides": "^2.16.0"
   },
@@ -19,6 +20,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
