--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css"
   },
   "dependencies": {
     "axios": "^1.3.5",
@@ -25,7 +26,10 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "install": "^0.13.0",
+    "node-sass": "^8.0.0",
     "npm": "^9.6.4",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "vue": "^2.7.14",
     "vue-router": "^3.4.2",
     "vue-template-compiler": "^2.5.17",
