--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "firebase": "^9.22.0",
     "register-service-worker": "^1.7.2",
     "vuelidate": "^0.7.7",
     "vueperslides": "^2.16.0"
