--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "compile:sass": "node-sass sass/main.scss css/style.comp.css"
   },
   "dependencies": {
+    "assert": "^2.0.0",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "firebase": "^9.22.0",
+    "firebase-admin": "^11.8.0",
     "register-service-worker": "^1.7.2",
+    "stream": "^0.0.2",
+    "url": "^0.11.0",
+    "util": "^0.12.5",
     "vuelidate": "^0.7.7",
     "vueperslides": "^2.16.0"
   },
