--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kost-catleya",
-  "version": "0.1.2",
+  "version": "0.2.2",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -20,6 +20,7 @@
     "stream": "^0.0.2",
     "url": "^0.11.0",
     "util": "^0.12.5",
+    "vue-loading-overlay": "6.0",
     "vuelidate": "^0.7.7",
     "vueperslides": "^2.16.0"
   },
