--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kost-catleya",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,6 +9,7 @@
     "compile:sass": "node-sass sass/main.scss css/style.comp.css"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "assert": "^2.0.0",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
