--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,4 +8,6 @@
         {"src":"./img/icons/android-chrome-maskable-512x512.png","sizes":"512x512","type":"image/png","purpose":"maskable"}],
     "start_url":".",
     "display":"standalone",
-    "background_color":"#000000"}
+    "background_color":"#000000",
+    "gcm_sender_id": "103953800507"
+}
