--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "apexcharts": "^3.41.0",
     "assert": "^2.0.0",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
@@ -20,6 +21,7 @@
     "stream": "^0.0.2",
     "url": "^0.11.0",
     "util": "^0.12.5",
+    "vue-apexcharts": "^1.6.2",
     "vue-loading-overlay": "6.0",
     "vuelidate": "^0.7.7",
     "vueperslides": "^2.16.0",
